--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,12 @@ img{
 li{
   list-style-type: none;
 }
+input, button{
+  font-size: 50px;
+}
 
 body {
+
   margin: auto;
   display: flex;
   place-items: center;
