--- a/src/Components/Pokemon.module.scss
+++ b/src/Components/Pokemon.module.scss
@@ -1,7 +1,28 @@
+button {
+  border: #5a809a 2px ridge;
+  border-radius: 5px;
+  padding: 0px;
+  font-size: 1px;
+  font-size: small;
+  width: 300px;
+  background-color: #0d68aa69;
+
+}
+
+form {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  position: absolute;
+  bottom: 2%
+}
+
 .principal {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: #1d000565, #0a0a0a78, #25232372;
 }
 
 
@@ -20,31 +41,25 @@
 }
 
 .container {
-  width: 1050px;
+  width: 950px;
   height: 600px;
   background-image: radial-gradient(93.75% 105.88% at 0.39% 99.26%, rgba(150, 1, 7, 0.4) 1.42%, rgba(30, 1, 66, 0.51) 53.8%, rgba(13, 14, 32, 0) 100%), linear-gradient(98.24deg, #1D0005 14.75%, rgba(0, 8, 29, 0.48) 100%), url(../../img//pokemon/Default.jpg);
   object-fit: fill;
   border-radius: 5px;
-
 }
 
 .info {
   position: absolute;
-  //transform: translateX(-50%);
-  background-color: #000;
+  background-color: rgb(81 158 80);
   color: #FFF;
+  font-size: 1rem;
   padding: 5px;
   opacity: 1;
   transition: opacity 0.3s ease;
-  width: 200px;
-}
-
-button {
-  border: #5a809a 2px ridge;
+  width: 250px;
   border-radius: 5px;
-  padding: 0px;
-  font-size: 1px;
-  font-size: small;
+  margin: 2px;
+  transform: translate(-35px, 10px);
 }
 
 
@@ -52,6 +67,8 @@ button {
   padding: 0px;
   height: 50px;
   width: 50%;
+  padding: 8px;
+  border-radius: 50px;
 }
 
 .imag {
@@ -60,4 +77,31 @@ button {
   background: radial-gradient(#fff505, rgb(218 202 29 / 93%), rgb(255 235 59 / 50%), rgb(255 235 59 / 0%), #108cee00);
   margin: none;
   border-radius: 50px;
+}
+
+.pokemon {
+  position: relative;
+  padding: 10px;
+  width: 400px;
+  filter: brightness(0) invert(1);
+  animation: poke 2s infinite;
+  pointer-events: none;
+  user-select: none;
+}
+
+@keyframes poke {
+  0% {
+    opacity: 1;
+    width: 400px;
+  }
+
+  50% {
+    opacity: 0.5;
+    width: 350px;
+  }
+
+  100% {
+    opacity: 1;
+    width: 400px;
+  }
 }
