--- a/src/Components/Pokemon.module.scss
+++ b/src/Components/Pokemon.module.scss
@@ -45,7 +45,7 @@ form {
   height: 600px;
   background-image: radial-gradient(93.75% 105.88% at 0.39% 99.26%, rgba(150, 1, 7, 0.4) 1.42%, rgba(30, 1, 66, 0.51) 53.8%, rgba(13, 14, 32, 0) 100%), linear-gradient(98.24deg, #1D0005 14.75%, rgba(0, 8, 29, 0.48) 100%), url(../../img//pokemon/Default.jpg);
   object-fit: fill;
-  border-radius: 5px;
+  border-radius: 1.5rem;
 }
 
 .info {
@@ -80,11 +80,11 @@ form {
 }
 
 .pokemon {
-  position: relative;
+  position: absolute;
   padding: 10px;
   width: 400px;
   filter: brightness(0) invert(1);
-  animation: poke 2s infinite;
+  animation: poke 2.5s infinite;
   pointer-events: none;
   user-select: none;
 }
@@ -97,7 +97,7 @@ form {
 
   50% {
     opacity: 0.5;
-    width: 350px;
+    width: 370px;
   }
 
   100% {
